Update projects section and pictures

--- a/index.html
+++ b/index.html
@@ -92,53 +92,54 @@
     </div>
   </section>
 
-  <!-- PROJECTS SECTION -->
+<!-- PROJECTS SECTION -->
   <section id="projects" class="section section-dark">
     <div class="container">
       <h2 class="typing-title" data-text="Projects"></h2>
 
       <!-- Project Item -->
       <div class="project">
-        <img src="ImagesProjects/GameProject1.jpg" alt="Project 1" />
+        <img src="ImagesProjects/Notepad3.jpg" alt="WPF Notepad Project Screenshot" />
         <div>
-          <p><strong>Game Controller UI</strong></p>
+          <p><strong>Notepad Text Editor – WPF Application</strong></p>
           <ul>
-            <li>Prototype interface for a game menu</li>
-            <li>Clean visuals and smooth UI animations</li>
-            <li>Built with HTML/CSS and Unity mockups</li>
+            <li>Developed a basic Notepad-style text editor using WPF and C#</li>
+            <li>Implements file operations (New, Open, Save, Save As, Exit) with character count</li>
+            <li>Uses the MVVM pattern and WPF Commanding for Edit functions (Cut, Copy, Paste)</li>
+            <li><strong>Technologies:</strong> .NET Framework, WPF, C#, MVVM, GitHub</li>
           </ul>
-          <a href="#">View Project</a>
+          <a href="https://github.com/Josers17/A02-WPF-Application-Josers17" target="_blank">View Project</a>
         </div>
       </div>
 
       <!-- Project Item -->
       <div class="project">
-        <img src="ImagesProjects/GameProject2.jpg" alt="Project 2" />
+        <img src="ImagesProjects/MusicStoreDB.jpg" alt="Music Store Database Project" />
         <div>
-          <p><strong>Game Day Website</strong></p>
+          <p><strong>Music Store Management System – CLI with MySQL</strong></p>
           <ul>
-            <li>Landing page for a fictional event</li>
-            <li>Fully responsive and mobile-friendly</li>
-            <li>HTML5, CSS3, and minimal JS used</li>
+            <li>Command-line system managing customers, albums, artists, and orders</li>
+            <li>Supports customer signup/login, admin CRUD operations, transactions, and address management</li>
+            <li>Built in C using MySQL C API for database interaction</li>
           </ul>
-          <a href="#">View Project</a>
+          <p><strong>Technologies:</strong> C, MySQL (MySQL C Connector), SQL, Relational DB, GitHub</p>
+          <a href="https://github.com/Josers17/Project-MySQL-Josers17" target="_blank">View Project</a>
         </div>
       </div>
 
       <!-- Project Item -->
       <div class="project">
-        <img src="ImagesProjects/GameProject3.jpg" alt="Project 3" />
+        <img src="ImagesProjects/WorkInProcess.jpg" alt="Project 3" />
         <div>
-          <p><strong>Tetris Clone</strong></p>
+          <p><strong>Roller Ball (In Progress)</strong></p>
           <ul>
-            <li>Recreation of the classic block game</li>
-            <li>Implemented using HTML5 Canvas</li>
-            <li>Custom logic for collision and scoring</li>
+            <li>Work in progress – gameplay, UI, and features are under development</li>
+            <li>Uses Unity and C#</li>
           </ul>
+          <p><em>This project is currently in development and will be updated soon.</em></p>
           <a href="#">View Project</a>
         </div>
       </div>
-    </div>
   </section>
 
   <!-- EDUCATION SECTION -->
