Add Badge Unity Essentials

--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
       <h2 class="typing-title" data-text="Certifications & Badges"></h2>
       <div class="badges-grid">
         <div class="badge-card">
+          <img src="ImagesProjects/unity-essentials-pathway.png" alt="Unity Badge1">
+          <p><a href="https://www.credly.com/badges/780a9669-8c72-4823-8cfc-4af18d029355/public_url" target="_blank">Unity Essentials</a></p>
+        </div>
+
+        <div class="badge-card">
           <img src="ImagesProjects/unity-junior-programmer.png" alt="Unity Badge">
           <p><a href="https://www.credly.com/badges/42dc4278-ad93-48c1-97d6-e952614ec472/public_url" target="_blank">Unity Junior Programmer</a></p>
         </div>
