Added project Tablet Banking App UI and Interactive Zoo Website

--- a/index.html
+++ b/index.html
@@ -129,6 +129,36 @@
 
       <!-- Project Item -->
       <div class="project">
+        <img src="ImagesProjects/TheGoodMoneyBankUI.jpg" alt="Tablet Banking App UI – Wireframes in Balsamiq" />
+        <div>
+          <p><strong>Tablet Banking App UI – Wireframes in Balsamiq</strong></p>
+          <ul>
+            <li>Designed 6 wireframes for a tablet banking application in landscape orientation using Balsamiq</li>
+            <li>Adapted 5 mobile screens (Login, Accounts, Transactions, Deposit, Camera) plus a new Home Dashboard with Bento Box layout</li>
+          </ul>
+          <p><strong>Technologies:</strong> Balsamiq Cloud</p>
+          <a href="https://github.com/Josers17/UIFundamentals-Task9.git" target="_blank">View Project</a>
+        </div>
+      </div>
+
+      <!-- Project Item -->
+      <div class="project">
+        <img src="ImagesProjects/PHPProject.jpg" alt="Interactive Zoo Website – PHP and JavaScript" />
+        <div>
+          <p><strong>Interactive Zoo Website – PHP and JavaScript</strong></p>
+          <ul>
+            <li>Developed a web application where users enter their name and select from six animals</li>
+            <li>Displays animal photo and description dynamically using PHP file handling</li>
+            <li>Implemented input validation in JavaScript to ensure proper user input (no blanks or spaces)</li>
+            <li>Styled with CSS and used images/backgrounds for a user-friendly interface</li>
+          </ul>
+          <p><strong>Technologies:</strong> PHP, HTML, CSS, JavaScript</p>
+          <a href="http://www.josemoralesswe.infinityfree.me/" target="_blank">View Project</a>
+        </div>
+      </div>
+
+      <!-- Project Item -->
+      <div class="project">
         <img src="ImagesProjects/WorkInProcess.jpg" alt="Project 3" />
         <div>
           <p><strong>Roller Ball (In Progress)</strong></p>
